# AWAIL

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  PLAN.md  README.md  knope.toml  test-steps.md  tradeoffs.md
.cargo/: config.toml
.changeset/: audio-buffer-overflow.md  auto-install-plugins.md  auto-release-setup.md  dynamic-port-names.md  equal-power-crossfade.md  fix-audio-not-flowing.md  fix-audio-recv-tcp-buffer.md  fix-audio-send-link-peers.md  fix-bars-playback.md  fix-decoder-state-leak.md  fix-interval-boundary-dropout.md  fix-interval-config-reset.md  fix-peer-join-audio-pop.md  fix-peer-reconnect-cascade.md  fix-private-rooms-in-public-list.md  fix-reconnect-slot-affinity.md  fix-release-artifacts.md  fix-release-branch-protection.md  fix-session-reconnect.md  fix-slot-status-connecting.md  fun-room-names.md  gate-audio-on-lock.md  homebrew-auto-install-plugins.md  homebrew-formula.md  latency-compensated-force-beat.md  linux-support.md  local-session-recording.md  log-panel-scroll.md  metered-turn-servers.md  ninjam-crossfade.md  peer-affinity-slots.md  peer-name-via-signaling.md  plugin-ui.md  show-local-sends.md  sine-roundtrip-test.md  skip-audio-no-link-peers.md  speed-windows-ci.md  streaming-audio.md  suppress-third-party-ui-logs.md  waif-streaming-migration.md  (+1 more)
crates/awail-app/: Cargo.toml
crates/awail-app/src/: main.rs
crates/awail-signaling/: Cargo.toml
crates/awail-signaling/src/: main.rs
crates/wail-e2e/: Cargo.toml
crates/wail-e2e/src/: chat.rs  main.rs
crates/wail-net/: Cargo.toml
crates/wail-net/src/: lib.rs  peer.rs  signaling.rs
crates/wail-net/tests/: ipc_e2e.rs  network.rs  signaling_tests.rs
crates/wail-net/tests/common/: mod.rs
docs/: architecture.md  missing-tests-punchlist.md  networking.md  system-evaluation.md  test-strategies.md
homebrew/: wail.rb
scripts/: install-plugin.sh  wail-install-plugins.sh
signaling-server/: Dockerfile  fly.toml  go.mod  go.sum  main.go  main_test.go
val-town/: main.ts
wail-app/: app.go  events.go  go.mod  go.sum  ipc.go  link_stub.go  noop_emitter.go  packet_loss.go  packet_loss_test.go  peers.go  plugin_install.go  protocol.go  session.go  signaling.go  test_tone.go  test_tone_test.go  version.go  version_test.go  wire.go  (+2 more)
(+76 files in other folders)
