[package]
name = "awail-app"
version.workspace = true
edition.workspace = true

[dependencies]
awail-core = { path = "../awail-core" }
awail-net = { path = "../awail-net" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
uuid = { workspace = true }
anyhow = { workspace = true }
