[package]
name = "awail-signaling"
version.workspace = true
edition.workspace = true

[dependencies]
awail-core = { path = "../awail-core" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
