[package]
name = "wail-e2e"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wail-e2e"
path = "src/main.rs"

[dependencies]
wail-core = { path = "../wail-core" }
wail-audio = { path = "../wail-audio" }
wail-net = { path = "../wail-net" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
